# Yaa

./: .gitignore  Akasha.md  CMakeLists.txt  README.md  act_imitate_learning.py  act_infer.py  config.py  constants.py  gi_env.py  imitate_learning.py  infer.py  log.md  mlp_imitate_learning.py  mlp_infer.py  policy.py  print_dataset_stats.py  print_hdf5.py  resample_record.py  test.ps1  test.sh  todo.md  train.ps1  train.sh  utils.py  visualize_hdf5.py
apps/: CMakeLists.txt  bb_utils.h  bitblt_test.cpp  dinput_test.cpp  interception_test.cpp  jsonl_test.cpp  ms_kb_recorder.cpp  ms_kb_test.cpp  ms_kb_utils.h  ring_buf.h  ring_buf_test.cpp  yaa_recorder.cpp
cmake/: cli11.cmake  interception.cmake  nlohmann_json.cmake  opencv.cmake
detr/: README.md  main.py
detr/models/: backbone.py  detr_vae.py
detr/util/: constants.py
doc/: Akasha.md  human_data_collection.md  log.md
scripts/: bb_capture_time.py  jsonl_timing.py  post_message.py  resample_record.py
shell_scripts/: record.ps1  test.sh  train.ps1  vis.ps1  vis.sh
test/: bb_times
validates/: bb_times_yap  get_activate_title_and_class.py  pynput_frequency.py
